2000-08-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-display.c:
	* component-factory.c: s/strncasecmp/g_strncasecmp

	* mail-format.c (write_headers): Get rid of kludge around subject
	beginning with spaces.
	(mail_generate_reply): Get rid of kludge around subject beginning
	with spaces and also use g_strncasecmp instead of strncasecmp for
	portability

	* mail-ops.c (forward_msg): Get rid of kludges around subject
	beginning with spaces.

2000-08-07  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_select): Clarify that the input row
	is a model row, and swap it to a view row when finding the
	next/previous row.
	(idle_select_row): Select view row 0, not model row 0.

	* mail-ops.c (select_first_unread): Start from view row 0, not
	model row 0.

2000-08-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-format.c (mail_get_message_body): Renamed from reply_body()
	so other functions can use it
	(mail_generate_reply): Updated to reflect function name changes

	* mail-ops.c (real_edit_msg): Attach a callback to the send signal

2000-08-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* folder-browser-factory.c (control_activate): New menu item under
	Actions to allow editing of messages.

	* mail-ops.c (edit_message): New function for editing messages.

	* component-factory.c (owner_set_cb): Create a global reference to
	the Drafts mbox folder for the Composer to use

2000-08-06  JP Rosevear  <jpr@helixcode.com>

	* mail-config.c (ndialog_page_undone): Desensitize ok button
	(sdialog_page_undone): ditto
	(iddialog_page_undone): ditto
	(news_page_new): Typo - news, not mail
	(transport_page_new): Typo - transport, not source
	(identity_dialog): Set undone callback
	(source_dialog): ditto
	(news_dialog): ditto
	(mail_druid_identity_undone): Desensitize next button and
	mark done flag as false
	(mail_druid_source_undone): ditto
	(mail_druid_transport_undone): ditto
	(mail_druid_identity_done): Mark done flag as true
	(mail_druid_source_done): ditto